--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
   "bugs": {
     "url": "https://github.com/bevacqua/dictatorship/issues"
   },
-  "dependencies": {
+  "devDependencies": {
+    "concurrently": "^3.5.0",
+    "express": "^4.15.4"
   },
   "main": "./src/dictatorship.js",
   "engines": {
     "node": "0.10.6",
     "npm": "1.2.x"
+  },
+  "scripts": {
+    "start": "node bin/server.js",
+    "test": "concurrent \"npm start\" \"npm start\""
   }
 }
